maze.pledge.PledgeMaze.scala.error
Erreur de compilation :
PledgeMaze:34: error: pattern definition may not be abstract
    var sommeAngle():Int
                  ^